--- a/EX022 - Imagem de Fundo/fundo007.html
+++ b/EX022 - Imagem de Fundo/fundo007.html
@@ -30,7 +30,7 @@
         left: 50%;
         top: 50%;
 
-        transform: translate(-50%, -50%); /*Serve para que o conteudo case com o container, mesma possícão*/
+        transform: translate(-50%, -50%); /*Serve para que o conteudo case com o container, mesma possícão.*/
 
     }
 
