--- a/EX020 - Pseudo Classe e Hover/Hover.html
+++ b/EX020 - Pseudo Classe e Hover/Hover.html
@@ -12,11 +12,11 @@ body {
 }
 
 div > p {
-    display: none;
+    display: none; /*Para esconder o texto*/
 }
 
 div:hover > p {
-    display: block;
+    display: block; /*Para mostrar o texto quando passar o mouse em cima*/
     color: rgb(255, 255, 255);
     background-color: rgb(77, 77, 77);
     width: 180px;
