--- a/EX020 - Pseudo Classe e Hover/Pseudoclasse.html
+++ b/EX020 - Pseudo Classe e Hover/Pseudoclasse.html
@@ -7,7 +7,7 @@
     <title>Pseudo-classes</title>
     <style>
         div {
-            display: inline-block;
+            display: inline-block; /*Tudo na mesma linha*/
             background-color: rgba(39, 39, 39, 0.39);
             border: 1px;color: rgb(0, 0, 0);
             text-align: center;
