--- a/EX023 - Tabela/index.html
+++ b/EX023 - Tabela/index.html
@@ -48,13 +48,13 @@
     -->
     
 <table>
-        <tr> <!-- tr são linha-->
+        <tr class="linha"> <!-- tr são linha-->
             <td>A1</td>
             <td>A2</td>
             <td>A3</td>
         </tr>
 
-        <tr class="linha">
+        <tr>
             <td>B1</td>
             <td class="numero">B2</td> <!--Alinhamento a direita-->>
             <td>B3</td>
